# cpp-interpreter

./: .gitignore  AST.cpp  AST.h  BytecodeBuilder.cpp  BytecodeBuilder.h  CMakeLists.txt  Program.cpp  Program.h  ProgramBuilder.cpp  ProgramBuilder.h  README.md  Symbols.cpp  Symbols.h  TestsAST.cpp  TestsBytecodeBuilder.cpp  TestsProgram.cpp  TestsProgramBuilder.cpp  TestsSymbols.cpp  core.cpp  core.h
include/: CMakeLists.txt
include/traf/: bytecode_builder.h  core.h  instructions.h  interpreter.h  program.h  program_builder.h  symbols.h
include/traf/definitions/: addition.h  architecture.h  literals.h  push.h  symbol.h  vtable.h
include/traf/detail/: errors.h  templates.h  types.h
include/traf/parsing/: AST.h  lexer.h  parser.h
include/traf/runtime/: heap_memory.h  runtime_basics.h  thread_pool.h  traf_thread.h  traf_vm.h
src/: AST.cpp  CMakeLists.txt  bytecode_builder.cpp  core.cpp  program.cpp  program_builder.cpp  symbols.cpp  tokenizing.cpp  traf_thread.cpp
tests/: CMakeLists.txt  TestsAST.cpp  TestsBytecodeBuilder.cpp  TestsProgram.cpp  TestsProgramBuilder.cpp  TestsSymbols.cpp  TestsTokens.cpp
